------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.6 branch)

------------------------------------------------------------------------------

See UPGRADE document for a list of incompatible changes.


Interchange 5.7.0 under development.

UserTag
-------

* srcliteral attribute added to [button] tag. Setting srcliteral avoids the image existence check for the src attribute. 

(end)